manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: "janus-idp"
  labels: 
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: janus-idp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: backstage
  template:
    metadata:
      labels:
        app.kubernetes.io/component: backstage
        backstage.io/kubernetes-id: janus-idp
      annotations:
        checksum/app-config: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
    spec:
      serviceAccountName: default
      containers:
        - resources:
            limits:
              cpu: 500m
            requests:
              cpu: 400m
          name: backstage-showcase
          image: backstage-showcase
          imagePullPolicy: "Always"
          command:
            - node
            - packages/backend
          volumeMounts:
            - name: ca-cert
              mountPath: "/mnt/certs"
          ports:
            - name: backend
              containerPort: 7007
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: 7007
              scheme: HTTP
            initialDelaySeconds: 3
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 3
