manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backstage
  namespace: "janus-idp"
  labels:
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: janus-idp
spec:
  tls:
    - hosts:
      - backstage-janus-idp.apps.janus-idp.w6gk.p1.openshiftapps.com
      secretName: janus-idp-cert
  rules:
    - host: backstage-janus-idp.apps.janus-idp.w6gk.p1.openshiftapps.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backstage
                port:
                  number: 7007
